Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
 
   <!-- Write your HTML here -->
+  <table>
+    <!-- Header Row -->
+    <tr>
+      <th></th>
+    </tr>
+    <!-- Content Row -->
+    
+  </table>
   
 </body>
 </html>
