Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <!-- Content Row -->
     <tr>
       <!-- Column 1 -->
-      <td></td>
+      <td>City</td>
       <!-- Column 2 -->
-      <td></td>
+      <td>State</td>
       <!-- Column 13-->
-      <td></td>
+      <td>2017 Estimate</td>
     </tr>
     
     <!-- Content Row -->
