Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <!-- Header Row -->
     <tr>
       <!-- Column 1 -->
-      <th></th>
+      <th>City</th>
       <!-- Column 2 -->
-      <th></th>
+      <th>State</th>
       <!-- Column 13-->
-      <th></th>
+      <th>2017 estimate</th>
     </tr>
     
     <!-- Content Row -->
@@ -33,11 +33,11 @@
     <!-- Content Row -->
     <tr>
       <!-- Column 1 -->
-      <td>"City"</td>
+      <td></td>
       <!-- Column 2 -->
-      <td>"State"</td>
+      <td></td>
       <!-- Column 13-->
-      <td>"2017 Estimate"</td>
+      <td></td>
     </tr>
     
     <!-- Content Row -->
