Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header Row -->
     <tr>
       <!-- Column 1 -->
-      <th>"City"</th>
+      <th>City</th>
       <!-- Column 2 -->
       <th>State</th>
       <!-- Column 13-->
