Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Content Row -->
     <tr>
       <!-- Column 1 -->
-      <td></td>
+      <td>New York</td>
       <!-- Column 2 -->
       <td></td>
       <!-- Column 13-->
@@ -33,7 +33,7 @@
     <!-- Content Row -->
     <tr>
       <!-- Column 1 -->
-      <td></td>
+      <td>Los Angeles</td>
       <!-- Column 2 -->
       <td></td>
       <!-- Column 13-->
@@ -43,7 +43,7 @@
     <!-- Content Row -->
     <tr>
       <!-- Column 1 -->
-      <td></td>
+      <td>Chicago</td>
       <!-- Column 2 -->
       <td></td>
       <!-- Column 13-->
@@ -53,7 +53,7 @@
     <!-- Content Row -->
     <tr>
       <!-- Column 1 -->
-      <td></td>
+      <td>Houston</td>
       <!-- Column 2 -->
       <td></td>
       <!-- Column 13-->
